--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body.home {
 
 /* Stack Page Background */
 body.stack {
-  background: #f2f4f6; /* Light gray */
+  background: #c5c9cde0; /* Light gray */
   color: #080808;
 }
 
@@ -42,7 +42,7 @@ body.stack {
 .main-title {
   font-family: 'Oswald', sans-serif;
   font-size: 4rem; /* Larger font size */
-  color: #ffffff; /* White text */
+  color: #aee1eb; /* White text */
   margin: 2rem;
   text-align: left; /* Indented to the left */
 }
@@ -91,7 +91,9 @@ body.stack {
 
 /* Animated Icon for Stack */
 .animated-icon {
-  animation: rotateIcon 2s linear infinite; /* Smooth rotation */
+  animation: rotateIcon 2s linear infinite;
+   /* Smooth rotation */
+  -webkit-animation: rotateIcon 4s linear infinite;
 }
 
 @keyframes rotateIcon {
@@ -128,7 +130,7 @@ body.stack {
 
 .stack-header .title {
   font-size: 3rem;
-  color: #080808;
+  color: #0e163c;
 }
 
 .stack-image {
@@ -170,7 +172,7 @@ table th {
 
 /* Visualization Section */
 .visualization canvas {
-  border: 2px solid #00ffcc;
+  border: 4px solid #00ffcc;
   background: #e9ecef;
   margin: 1rem auto;
   display: block;
