--- a/styles/style.css
+++ b/styles/style.css
@@ -41,8 +41,8 @@ body.stack {
 /* Home Page Main Title */
 .main-title {
   font-family: 'Oswald', sans-serif;
-  font-size: 8rem; /* Larger font size */
-  color: #42828f; /* White text */
+  font-size: 6rem; /* font size */
+  color: #42828f; /* color text */
   margin: 2rem;
   text-align: left; /* Indented to the left */
 }
@@ -140,11 +140,16 @@ body.stack {
 
 /* General Box Styling for Sections */
 .box {
-  background: #f2efefe3; /* White background for contrast */
-  border-radius: 8px;
+  background: #f2efefe3;
+  /*Whitebackgroundforcontrast*/border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+   /* Subtle shadow for depth */
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
 }
 
 /* Table Styling */
