--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
 /* Home Page Background */
 body.home {
   background: #0d1a2d; /* Dark blue */
-  color: #515393;
+  color: #e0e0eb;
 }
 
 /* Stack Page Background */
