--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body.home {
 
 /* Stack Page Background */
 body.stack {
-  background: #b5b7bae0; /* Light gray */
+  background: #fafafae0; /* Light gray */
   color: #030058;
 }
 
@@ -140,7 +140,7 @@ body.stack {
 
 /* General Box Styling for Sections */
 .box {
-  background: #f2efefe3;
+  background: #cecece;
   /*Whitebackgroundforcontrast*/border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
@@ -166,7 +166,7 @@ table th, table td {
 }
 
 table th {
-  background: #f0f0f0; /* Light gray header for the table */
+  background: #dbdbdb; /* Light gray header for the table */
   font-weight: bold;
 }
 
@@ -181,8 +181,8 @@ table th {
   background: #e9ecef;
   margin: 1rem auto;
   display: block;
-  width: 800px;
-  height: 500px;
+  width: 500px;
+  height: 300px;
 }
 
 .controls {
@@ -192,6 +192,7 @@ table th {
 
 .controls button {
   margin: 0.5rem;
+  font-family: 'Montserrat', sans-serif;
   padding: 0.5rem 1rem;
   font-size: 1rem;
   background: #3498db; /* Button color */
