--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ body.stack {
 .stack-icon {
   width: 50px;
   height: 50px;
-  background-image: url('../assets/icons/stack.svg');
+  background-image: url('../assets/icons/stack_icon.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
