--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,7 @@ body.stack {
   width: 100%;
   height: 100%;
   pointer-events: none; /* Not clickable */
-  background-image: url('../assets/decorations.svg'); /* Add SVG decorations */
+  background-image: url('../assets/decorations.svg'); /* Path to your SVG file */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
