--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ body.stack {
 }
 
 .circle h3 {
-  font-size: 1rem;
+  font-size: 2rem;
   margin-top: 0.5rem;
   text-decoration: none; /* No underline */
 }
@@ -83,7 +83,7 @@ body.stack {
 .stack-icon {
   width: 50px;
   height: 50px;
-  background-image: url('../assets/icons/stack_icon.png');
+  background-image: url('../assets/icons/stack.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
