--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ body.stack {
 .circle h3 {
   font-size: 1.5rem;
   margin-top: 0.5rem;
-  text-decoration: none; /* No underline */
+  text-decoration: none !important; /* No underline */
 }
 
 .stack-icon {
