fix arrows in Stack

--- a/styles/style.css
+++ b/styles/style.css
@@ -258,7 +258,7 @@ body.stack::before {
 
 /* General Box Styling for Sections  */
 .box {
-  background: #d5d8dd;
+  background: #e7e9ed;
   border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
